# CPAC_regtest_pack

./: Dockerfile  README.md  callback_log_time_parse.py  corr_csv.py  corr_two_1D.py  corr_two_ts.py  correlation_matrix.py  correlations_inputs.yml  cpac_correlations.py  cpac_correlations_wf.py  cpac_data_config_regtest.yml  cpac_pipe_diff.py  create correlation matrix.ipynb  data_config_HNU30_ses1.yml  data_config_regtest.yml  data_config_regtest_quick.yml  data_config_regtest_quick_incomplete.yml  heatmaps.py  pipeline_comp_regressors.py  plot_fmriprep.ipynb  pytest.ini  regtest_pipeline_ants-spike.yaml  regtest_pipeline_ants.yaml  requirements.txt  run latest C-PAC.ipynb  run_cpac.sh  run_cpac_container_default.sh  run_cpac_container_fmriprep-options.sh  run_cpac_container_preproc.sh  run_quick_regtest.sh  run_regtest.sh  run_regtest_CURRENT-BRANCH_benchmark-ANTS.sh  run_regtest_CURRENT-BRANCH_benchmark-ANTS_PREv161.sh  run_regtest_CURRENT-BRANCH_benchmark-FNIRT.sh  run_regtest_CURRENT-BRANCH_benchmark-FNIRT_PREv161.sh  run_regtest_CURRENT-BRANCH_default.sh  run_regtest_CURRENT-BRANCH_default_noSCA.sh  run_regtest_CURRENT-BRANCH_fmriprep-options.sh  run_regtest_CURRENT-BRANCH_fmriprep-options_HNU.sh  run_regtest_CURRENT-BRANCH_fmriprep-options_PREv161.sh  (+9 more)
.circleci/: config.yml
configs/: benchmarks.yml  cpac.yml  defaults.py  fmriprep.yml  subjects.py
cpac_correlations/: __init__.py  cpac_correlations.py  pyproject.toml
run_scripts/: run_CURRENT-BRANCH_default-pipeline.sh  run_CURRENT-BRANCH_default-pipeline_noSCA.sh  run_CURRENT-BRANCH_lei-xcp.sh  run_warps.sh  (+20 more)
(+16 files in other folders)
