[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
known_collab = ["nibabel", "nilearn", "nipype", "PyBASC", "pybids", "scipy", "spython"]
known_first_party = ["CPAC"]
known_otherfirstparty = ["flowdump", "indi_aws", "indi_schedulers", "PyPEER"]
no_lines_before = ["collab", "other-first-party", "local-folder"]
order_by_type = false
sections = ["FUTURE",
 "STDLIB",
 "THIRDPARTY",
 "COLLAB",
 "OTHERFIRSTPARTY",
 "FIRSTPARTY",
 "LOCALFOLDER"]
split_on_trailing_comma = true
use_parentheses = true

[project]
dependencies = ["matplotlib", "nibabel", "numpy", "pandas", "pyyaml"]
name = "cpac_correlations"
requires-python = ">= 3.9"
version = "1.0.128"

[project.scripts]
cpac_correlations = "cpac_correlations:main"
